- Plugin OutageReport replaced by plugin MailingLists which can check multiple
  lists. Configuration section :outage_list is renamed to :mailing_lists.
- Plugin DokuWiki to monitor recents changes in a wiki
- Plugin BlogFeed to announce new blog posts
- URL: marker
  - support and limit redirects, max size and content type
  - remove line breaks
- Plugin KeepNick renames the bot if its name is changed
- TemplateLogger: fix time zone transition
- DokuWiki: support for multiple wikis

* Sat Aug 27 2016 - version 0.1.0
- Initial release